Fixed bottom margin, added counter to show visible games.

--- a/frontend/src/pages/MLBData/MLBData.scss
+++ b/frontend/src/pages/MLBData/MLBData.scss
@@ -124,7 +124,7 @@
   flex-direction: column; /* Change to column layout */
   align-items: center; /* Center items horizontally */
   width: 100%;
-
+  margin-bottom: 10px;
 }
 
 .game-data {
